# harness-style-multi-agent-framework

./: README.md  app.py  conversations.db  eval.py  life_assistant.db  main.py  pyproject.toml  run__all.py
auth/: __init__.py  dependencies.py  models.py  security.py
central_agent/: __init__.py  orchestrator.py
central_agent/chroma_db/: chroma.sqlite3
chroma_db/: chroma.sqlite3
config/: base_system.md  logger.py  settings.py
docker/: Dockerfile  docker-compose.yml
evaluation/: __init__.py  evaluator.py  judge.py
infrastructure/: __init__.py  redis_client.py
knowledge/: __init__.py  knowledge_loader.py  vector_store.py
memory/: __init__.py  store.py
protocol/: __init__.py  errors.py  mcp_base.py
resilience/: circuit_breaker.py  fallback.py  health_checker.py  idempotency.py  rate_limiter.py  retry.py
skill_registry/: __init__.py  registry.json  registry.py
skills/calculator/: mcp_profile.json  schema.json  server.py  skill.md
skills/note/: mcp_profile.json  schema.json  server.py  skill.md
skills/reminder/: __init__.py  mcp_profile.json  schema.json  server.py  skill.md
skills/weather/: mcp_profile.json  schema.json  server.py  skill.md
storage/: __init__.py  database.py  experience_store.py  models.py  repository.py
sub_agents/: __init__.py  base.py  note_agent.py  weather_agent.py
tests/: conftest.py  test_orchestrator.py  test_protocol.py  test_registry.py  test_resilience.py  test_routing.py
tests/fixtures/: routing_cases.json
tests/test_skills/: test_calculator.py  test_reminder.py
