[project]
name = "jupyterproject"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "chromadb>=1.5.9",
    "circuitbreaker>=2.1.3",
    "dashscope>=1.25.19",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "langchain-community>=0.4.2",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "numpy>=2.4.6",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.0.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.29",
    "redis[hiredis]>=8.0.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers==2.6.1",
    "sqlalchemy>=2.0.50",
    "streamlit>=1.58.0",
    "streamlit-cookies-manager>=0.2.0",
    "structlog>=24.0.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.30.0",
]


[[tool.uv.index]]
name = "ustc"
url = "https://pypi.org/simple/"
default = true

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
]
